@@ -1,12 +1,14 @@
 package com.pikachu.purple.application.perfume.util;
 
+import static com.pikachu.purple.bootstrap.common.exception.BusinessException.ReviewNotFoundException;
+
 import com.pikachu.purple.domain.note.Note;
 import com.pikachu.purple.domain.perfume.PerfumeNote;
 import com.pikachu.purple.domain.rating.Rating;
+import com.pikachu.purple.domain.review.Review;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -25,18 +27,21 @@ public class RecommendNotesProvider {
         0.5, -1.0
     );
 
-    public List<Note> getTopThreeNotes(
-        List<Rating> ratingList,
-        List<PerfumeNote> perfumeNoteList
-    ) {
-        Map<String, Double> noteScoreMap = new HashMap<>();
+    private static final Map<String, Double> noteScoreMap = new HashMap<>();
 
-        for (Rating rating : ratingList) {
-            Long perfumeId = rating.getPerfumeId();
+    public List<Note> getTopThreeNotes(
+        List<Review> reviews,
+        List<Rating> ratings,
+        List<PerfumeNote> perfumeNotes
+    ) {
+        noteScoreMap.clear();
+
+        for (Rating rating : ratings) {
+            Long perfumeId = findPerfumeId(reviews, rating);
             Double score = rating.getScore();
             Double weightedScore = convert(score);
 
-            for (PerfumeNote note : perfumeNoteList) {
+            for (PerfumeNote note : perfumeNotes) {
                 if (note.getPerfumeId().equals(perfumeId)) {
                     noteScoreMap.merge(
                         note.getNoteName(),
@@ -51,7 +56,15 @@ public class RecommendNotesProvider {
             .sorted(Map.Entry.<String, Double>comparingByValue().reversed())
             .limit(3)
             .map(entry -> new Note(entry.getKey()))
-            .collect(Collectors.toList());
+            .toList();
+    }
+
+    private Long findPerfumeId(List<Review> reviews, Rating rating) {
+        return reviews.stream()
+            .filter(review -> review.getReviewId().equals(rating.getReviewId()))
+            .map(Review::getPerfumeId)
+            .findFirst()
+            .orElseThrow(() -> ReviewNotFoundException);
     }
 
     private double convert(double score){
